force-app/main/default/objects/phsCourseProgress__c/phsCourseProgress__c.object-meta.xml
<CustomObject>
    <description>This object tracks user progress on course videos</description>
    <label>phsCourseProgress</label>
    <nameField>
        <label>phsVideoProgress__c  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>phsCourseProgress</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>