force-app/main/default/objects/phsCourseProgress__c/fields/CourseModule__c.field-meta.xml
<CustomField>
    <fullName>CourseModule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CourseModule</label>
    <referenceTo>phsCourseModule__c</referenceTo>
    <relationshipLabel>phsCourseProgress</relationshipLabel>
    <relationshipName>phsCourseProgress</relationshipName>
    <type>Lookup</type>
</CustomField>