force-app/main/default/objects/phsCourseProgress__c/fields/LastWatchedTime__c.field-meta.xml
<CustomField>
    <fullName>LastWatchedTime__c</fullName>
    <label>LastWatchedTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>