force-app/main/default/objects/phsCourseProgress__c/fields/TotalDuration__c.field-meta.xml
<CustomField>
    <fullName>TotalDuration__c</fullName>
    <label>TotalDuration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>