force-app/main/default/objects/phsCourseProgress__c/fields/WatchPercentage__c.field-meta.xml
<CustomField>
    <fullName>WatchPercentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>WatchPercentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>